package app.entities;

public class CupcakeBottom {
    private int bottom_id;
    private String bottomName;
    private int bottomPrice;

    public CupcakeBottom(int bottom_id, String bottomName, int bottomPrice) {
        this.bottom_id = bottom_id;
        this.bottomName = bottomName;
        this.bottomPrice = bottomPrice;
    }
}
